[#57577] Set up email notification on erver exception

--- a/dev-environment/admin/dev-settings.toml
+++ b/dev-environment/admin/dev-settings.toml
@@ -65,6 +65,10 @@ DEFAULT_FROM_EMAIL = "os2datascanner@magenta.dk"
 ADMIN_EMAIL = "os2datascanner@magenta.dk"
 EMAIL_HOST = 'mailhog'
 EMAIL_PORT = 1025
+SERVER_EMAIL = "os2datascanner@magenta.dk"
+
+# [error reporting]
+ADMINS = ['os2datascannersupport@magenta-aps.dk']
 
 # https://django-debug-toolbar.readthedocs.io/en/latest/configuration.html#debug-toolbar-config
 [DEBUG_TOOLBAR_CONFIG]
