[#59055] Added initial_setup management command
[#59055] Added command to report module

[#59055] CHANGELOG

[#59055] Added phone number and email args + refactor

[#59055] Use IntegrityError and get_or_create

[#59055] Add unit tests]

[#59055] Implemented feedback

[#59055] Make transaction atomic

[#59055] Remove unhelpful helper functions, Add unit tests

[#59055] More accurate message

[#59055] Updated unit tests

[#59055] Internal documentation

[#59055] Update documentation

mend

--- a/src/os2datascanner/projects/admin/default-settings.toml
+++ b/src/os2datascanner/projects/admin/default-settings.toml
@@ -129,7 +129,7 @@ STATICFILES_DIRS = [
 ]
 ICON_SPRITE_URL = "/static/svg/symbol-defs.svg"
 LOGIN_REDIRECT_URL = "/"
-NOTIFICATION_INSTITUTION = ""
+NOTIFICATION_INSTITUTION = "DUMMY"
 
 MIDDLEWARE = [
     "django_prometheus.middleware.PrometheusBeforeMiddleware",
