--- a/src/os2datascanner/projects/report/default-settings.toml
+++ b/src/os2datascanner/projects/report/default-settings.toml
@@ -236,8 +236,7 @@ BUILD_DIR = ["*", "build"]
 VAR_DIR = ["*", "var"]
 LOGS_DIR = ["*", "var", "logs"]
 STATIC_ROOT = ["*", 'src', 'os2datascanner', 'projects', 'static', 'report']
-MEDIA_ROOT = ["*", "uploads", "report"]
-
+MEDIA_ROOT = ["*", "src", "os2datascanner", "projects", "report", "media", "images"]
 # loglevel for components from engine
 [log]
 log_path = ""
