--- a/src/os2datascanner/projects/report/default-settings.toml
+++ b/src/os2datascanner/projects/report/default-settings.toml
@@ -198,11 +198,11 @@ AUTHN_REQUESTS_SIGNED = false
 
     [SAML2_AUTH.ATTRIBUTES_MAP]
     # Change Email/UserName/FirstName/LastName to corresponding SAML2 userprofile attributes.
-    email = 'Email'
-    username = 'UserName'
-    first_name = 'FirstName'
-    last_name = 'LastName'
-    sid = 'Security Identifier'
+    email = 'email'
+    username = 'username'
+    first_name = 'first_name'
+    last_name = 'last_name'
+    sid = 'sid'
 
     [SAML2_AUTH.TRIGGER]
     CREATE_USER = 'path.to.your.new.user.hook.method'
