[#59254] Add poc for dpo csv export
[#59254] DPO CSV initial PoC

[#59254] Move CSVMixin, Refactor statistics

[#59254] Allow more than 12 months of data

[#59254] Add unit tests and feature flag

[#59254] Add feature flag and code comments

[#59254] Remove empty data

[#5925] Fix unit tests

[#59254] More unit tests

[#59284] Add CHANGELOG entry

--- a/src/os2datascanner/projects/report/default-settings.toml
+++ b/src/os2datascanner/projects/report/default-settings.toml
@@ -23,6 +23,7 @@ SAML2_ENABLED = false
 HANDLE_DROPDOWN = false
 ALLOW_CONTACT_MAGENTA = false
 ARCHIVE_TAB = true
+DPO_CSV_EXPORT = false
 
 # [msgraph]
 MSGRAPH_ALLOW_WRITE = false
