--- a/dev-environment/report/dev-settings.toml
+++ b/dev-environment/report/dev-settings.toml
@@ -9,6 +9,7 @@ SAML2_ENABLED = false
 # [functionality]
 HANDLE_DROPDOWN = true
 ALLOW_CONTACT_MAGENTA = true
+DPO_CSV_EXPORT = true
 
 # [site]
 # The URL of this site, used in links in emails and in the redirect URL for
