[#59615] Add popover documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,7 @@ nav:
     - Frontend Guides:
       - Buttons: frontend/buttons/buttons.md
       - Icons: frontend/icons.md
+      - Components: frontend/components/utility.md
   - Other:
     - Reusable components: reusable-components.md
     - Release notes: changelog.md
