[#59776] Change MSGraph write operations for org

--- a/dev-environment/report/dev-settings.toml
+++ b/dev-environment/report/dev-settings.toml
@@ -34,6 +34,7 @@ NOTIFICATION_INSTITUTION = 'MAGENTA APS'
 MSGRAPH_ALLOW_WRITE = true
 MSGRAPH_APP_ID = ""
 MSGRAPH_CLIENT_SECRET = ""
+MSGRAPH_TENANT_ID = ""
 
 # KEYCLOAK
 OIDC_RP_CLIENT_ID = "os2datascanner"
