--- a/src/os2datascanner/projects/report/default-settings.toml
+++ b/src/os2datascanner/projects/report/default-settings.toml
@@ -24,6 +24,7 @@ HANDLE_DROPDOWN = false
 ALLOW_CONTACT_MAGENTA = false
 ARCHIVE_TAB = true
 DPO_CSV_EXPORT = false
+ALLOW_SHOW_ERRORS = false
 
 # [msgraph]
 MSGRAPH_ALLOW_WRITE = false
@@ -119,6 +120,7 @@ SETTINGS_EXPORT = [
     'HANDLE_DROPDOWN',
     'ALLOW_CONTACT_MAGENTA',
     'ARCHIVE_TAB',
+    'ALLOW_SHOW_ERRORS',
     'MSGRAPH_APP_ID',
     'MSGRAPH_CLIENT_SECRET',
     'MSGRAPH_ALLOW_WRITE',
