[#60073] Also use the DPO_CSV_EXPORT-setting in the template

--- a/src/os2datascanner/projects/report/default-settings.toml
+++ b/src/os2datascanner/projects/report/default-settings.toml
@@ -122,6 +122,7 @@ SETTINGS_EXPORT = [
     'ALLOW_CONTACT_MAGENTA',
     'ARCHIVE_TAB',
     'ALLOW_SHOW_ERRORS',
+    'DPO_CSV_EXPORT',
     'MSGRAPH_APP_ID',
     'MSGRAPH_CLIENT_SECRET',
     'MSGRAPH_ALLOW_WRITE',
