--- a/src/os2datascanner/projects/admin/default-settings.toml
+++ b/src/os2datascanner/projects/admin/default-settings.toml
@@ -109,6 +109,7 @@ OS2DATASCANNER_APPS = [
     'os2datascanner.projects.admin.organizations',
     'os2datascanner.projects.admin.import_services',
     'os2datascanner.projects.admin.grants',
+    'os2datascanner.projects.shared',
     'os2datascanner.core_organizational_structure.apps.CoreOrganizationalStructureConfig'
 ]
 
