--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,7 @@ nav:
       - Buttons: frontend/buttons/buttons.md
       - Icons: frontend/icons.md
       - Components: frontend/components/utility.md
+      - Tables: frontend/tables.md
   - Other:
     - Reusable components: reusable-components.md
     - Release notes: changelog.md
