[#60489] Clarify that the model.http settings node is just for WebSource

--- a/src/os2datascanner/engine2/default-settings.toml
+++ b/src/os2datascanner/engine2/default-settings.toml
@@ -67,6 +67,7 @@ directory = ""
 # replaced by a new plaintext conversion (in bytes)
 size_threshold = 1048576
 
+# Note that these settings only affect WebSource/WebResource
 [model.http]
 # The maximum number of outgoing HTTP requests an individual process can make
 # every second
