[#44676] Updates structlog and uses that for the admin project .. Also installed 'rich', for cool output formatting potential, etc. ... and deleted "TrivialLogger", which seems to be replaceable, if you change the way you format strings. .... also enabled tty for the admin container, which lets you see colours.
Unless I'm stopped here, I'm coming for you, reportmodule and engine, next.

--- a/requirements/python-requirements/requirements-all.in
+++ b/requirements/python-requirements/requirements-all.in
@@ -15,6 +15,7 @@ google-api-python-client
 oauth2client
 parameterized
 pika==1.2.0
+rich
 sortedcontainers
 structlog
 toml
@@ -74,7 +75,7 @@ django-prometheus
 django-recurrence
 django-settings-export
 django-storages[google]
-django-structlog
+django-structlog==8.0.0
 gunicorn
 uvicorn[standard]
 psycopg2-binary
