--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,6 +107,8 @@ services:
       "--reload-include", "*.mo",
       "os2datascanner.projects.admin.asgi:application",
     ]
+    tty: # If you like coloured log messages.
+      true
     volumes:
       # First line below is needed in dev, because we copy all our live code in, which replaces
       # the built-in code from Dockerfile (this is for watchdog reasons)
