--- a/requirements/python-requirements/requirements-all.txt
+++ b/requirements/python-requirements/requirements-all.txt
@@ -6,11 +6,12 @@
 #
 anyio==3.6.2
     # via watchfiles
-asgiref==3.5.2
+asgiref==3.8.1
     # via
     #   channels
     #   channels-redis
     #   django
+    #   django-structlog
 asttokens==2.0.8
     # via stack-data
 async-timeout==4.0.2
@@ -86,7 +87,7 @@ django-debug-toolbar==3.7.0
     # via -r requirements-all.in
 django-extensions==3.2.1
     # via -r requirements-all.in
-django-ipware==4.0.2
+django-ipware==7.0.1
     # via django-structlog
 django-js-asset==2.0.0
     # via django-mptt
@@ -106,7 +107,7 @@ django-settings-export==1.2.1
     # via -r requirements-all.in
 django-storages[google]==1.13.1
     # via -r requirements-all.in
-django-structlog==4.0.0
+django-structlog==8.0.0
     # via -r requirements-all.in
 djangorestframework==3.14.0
     # via
@@ -202,8 +203,12 @@ lxml==4.9.2
     #   python3-saml
     #   unittest-xml-reporting
     #   xmlsec
+markdown-it-py==3.0.0
+    # via rich
 matplotlib-inline==0.1.6
     # via ipython
+mdurl==0.1.2
+    # via markdown-it-py
 mozilla-django-oidc==2.0.0
     # via -r requirements-all.in
 msgpack==1.0.4
@@ -291,6 +296,7 @@ pygments==2.13.0
     # via
     #   exchangelib
     #   ipython
+    #   rich
 pyjwt==1.7.1
     # via djangorestframework-jwt
 pynacl==1.5.0
@@ -335,6 +341,8 @@ python-dateutil==2.8.2
     #   pysaml2
 python-dotenv==0.21.0
     # via uvicorn
+python-ipware==3.0.0
+    # via django-ipware
 python-magic==0.4.27
     # via -r requirements-all.in
 python3-saml==1.15.0
@@ -371,6 +379,8 @@ requests-ntlm==1.1.0
     # via exchangelib
 requests-oauthlib==1.3.1
     # via exchangelib
+rich==13.7.1
+    # via -r requirements-all.in
 rsa==4.9
     # via
     #   google-auth
