--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -206,6 +206,8 @@ services:
       "--reload-include", "*.mo",
       "os2datascanner.projects.report.asgi:application",
     ]
+    tty:
+      true
     volumes:
       # First line below is needed in dev, because we copy all our live code in, which replaces
       # the built-in code from Dockerfile (this is for watchdog reasons)
