--- a/dev-environment/engine/dev-settings.toml
+++ b/dev-environment/engine/dev-settings.toml
@@ -1,4 +1,7 @@
 secret_value = "THIS VALUE IS NOT SECRET"
+# [logging]
+LOG_LEVEL = "DEBUG"
+
 
 [amqp]
 # Nested amqp settings are picked up by the common amqp utility module
