--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -137,6 +137,8 @@ services:
       dockerfile: docker/base/Dockerfile
       target: admin
     command: python manage.py checkup_collector
+    tty:
+      true
     volumes:
       - ./dev-environment/admin/dev-settings.toml:/user-settings.toml
       - ./src/os2datascanner:/code/src/os2datascanner
@@ -150,6 +152,8 @@ services:
       dockerfile: docker/base/Dockerfile
       target: admin
     command: python manage.py status_collector
+    tty:
+      true
     volumes:
       - ./dev-environment/admin/dev-settings.toml:/user-settings.toml
       - ./src/os2datascanner:/code/src/os2datascanner
@@ -165,6 +169,8 @@ services:
     environment:
       - AMQP_BROADCAST_SYNC=false
     command: python manage.py run_background_jobs
+    tty:
+      true
     volumes:
       - ./dev-environment/admin/dev-settings.toml:/user-settings.toml
       - ./src/os2datascanner:/code/src/os2datascanner
@@ -181,6 +187,8 @@ services:
       dockerfile: docker/base/Dockerfile
       target: report
     command: ["python", "manage.py", "migrate"]
+    tty:
+      true
     volumes:
       - ./dev-environment/report/dev-settings.toml:/user-settings.toml
       - ./src/os2datascanner:/code/src/os2datascanner
@@ -240,6 +248,8 @@ services:
       dockerfile: docker/base/Dockerfile
       target: report
     command: python manage.py event_collector
+    tty:
+      true
     volumes:
       - ./dev-environment/report/dev-settings.toml:/user-settings.toml
       - ./src/os2datascanner:/code/src/os2datascanner
@@ -253,6 +263,8 @@ services:
       dockerfile: docker/base/Dockerfile
       target: report
     command: python manage.py result_collector
+    tty:
+      true
     volumes:
       - ./dev-environment/report/dev-settings.toml:/user-settings.toml
       - ./src/os2datascanner:/code/src/os2datascanner
@@ -265,6 +277,8 @@ services:
       dockerfile: docker/base/Dockerfile
       target: report
     command: python manage.py email_tagger
+    tty:
+      true
     volumes:
       - ./dev-environment/report/dev-settings.toml:/user-settings.toml
       - ./src/os2datascanner:/code/src/os2datascanner
@@ -280,6 +294,8 @@ services:
       - ./dev-environment/engine/dev-settings.env
     command: explorer
     init: true
+    tty:
+      true
     volumes:
       - ./dev-environment/engine/dev-settings.toml:/user-settings.toml
       - ./src/os2datascanner:/code/src/os2datascanner
@@ -301,6 +317,8 @@ services:
       - SCHEDULE_ON_CPU=0
       - QUEUE_SUFFIX
       - ENABLE_RUSAGE=true
+    tty:
+      true
     volumes:
       - ./dev-environment/engine/dev-settings.toml:/user-settings.toml
       - ./src/os2datascanner:/code/src/os2datascanner
@@ -316,6 +334,8 @@ services:
     env_file:
       - ./dev-environment/engine/dev-settings.env
     init: true
+    tty:
+      true
     volumes:
       - ./dev-environment/engine/dev-settings.toml:/user-settings.toml
       - ./src/os2datascanner:/code/src/os2datascanner
@@ -346,6 +366,8 @@ services:
       - "8070:5000"
     environment:
       -  OS2DS_ADMIN_USER_CONFIG_PATH="/dev-environment/api/dev-settings.toml"
+    tty:
+      true
     volumes:
       - ./dev-environment/api/dev-settings.toml:/user-settings.toml
       - ./src/os2datascanner:/code/src/os2datascanner
