[#44767] Add CallsiteParameter processor for function and modules .. and removal of log setLevel uses. We should mostly do it the env var way now

--- a/dev-environment/report/dev-settings.toml
+++ b/dev-environment/report/dev-settings.toml
@@ -6,6 +6,9 @@ MEDIA_ROOT = ["*"," src", "os2datascanner", "projects", "report"]
 DEBUG = true
 SAML2_ENABLED = false
 
+# [logging]
+LOG_LEVEL = "INFO"
+
 # [functionality]
 HANDLE_DROPDOWN = true
 ALLOW_CONTACT_MAGENTA = true
