--- a/src/os2datascanner/projects/report/default-settings.toml
+++ b/src/os2datascanner/projects/report/default-settings.toml
@@ -7,6 +7,7 @@
 # /dev-environment/dev-settings.toml
 
 SECRET_KEY = ""
+DECRYPTION_HEX = ""
 
 # django-prometheus will try to connect to postgresql during collectstatic
 # without this setting: https://github.com/korfuri/django-prometheus/issues/34.
