--- a/requirements/python-requirements/requirements-all.in
+++ b/requirements/python-requirements/requirements-all.in
@@ -34,6 +34,9 @@ pandas
 Pillow
 prometheus_client
 PyNaCl
+pydantic
+pydantic-settings
+pymssql
 pypdf
 pysmbc
 pytest
@@ -44,6 +47,7 @@ python-magic
 pytz
 regex
 requests
+sqlalchemy
 xattr
 xlrd
 click
