[#60977] Add initial backend support for SMB file deletion
If you set the new SMB_ALLOW_WRITE setting and create a SMBGrant in the
report module, then it can now attempt to delete files

--- a/dev-environment/report/dev-settings.toml
+++ b/dev-environment/report/dev-settings.toml
@@ -40,6 +40,8 @@ MSGRAPH_APP_ID = ""
 MSGRAPH_CLIENT_SECRET = ""
 MSGRAPH_TENANT_ID = ""
 
+SMB_ALLOW_WRITE = true
+
 # KEYCLOAK
 OIDC_RP_CLIENT_ID = "os2datascanner"
 # endpoints
