--- a/src/os2datascanner/projects/admin/default-settings.toml
+++ b/src/os2datascanner/projects/admin/default-settings.toml
@@ -186,6 +186,7 @@ LANGUAGE_CODE = "da-dk"
 _LOCALE_PATHS = [
     ["*", "src", "os2datascanner", "projects", "admin", "locale"],
     ["*", "src", "os2datascanner", "core_organizational_structure", "locale"],
+    ["*", "src", "os2datascanner", "projects", "grants", "locale"],
 ]
 _LANGUAGES = [
     ["da", "Danish"],
