[#61026] Add MSSQL_COLLATION env variable

--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -265,6 +265,7 @@ ARG BASE_IMAGE=base
 FROM ${BASE_IMAGE} AS sbsys-init
 
 ENV ACCEPT_EULA=Y \
+    MSSQL_COLLATION=SQL_Danish_Pref_CP1_CI_AS \
     SBSYS_HOST=SBSYS_DB \
     SBSYS_PORT=1433 \
     SBSYS_USER=sa \
