[#61139] Make the web servers reload on any Python source change
Everything in (the Docker container's) /code/src/os2datascanner folder is
now covered by the auto-reloader

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -134,6 +134,7 @@ services:
       "--reload",
       "--host", "0.0.0.0",
       "--port", "5000",
+      "--reload-dir", "/code/src/os2datascanner",
       # reload when translations are compiled with `docker-compose exec admin django-admin compilemessages`
       "--reload-include", "*.mo",
       "os2datascanner.projects.admin.asgi:application",
@@ -241,6 +242,7 @@ services:
       "--reload",
       "--host", "0.0.0.0",
       "--port", "5000",
+      "--reload-dir", "/code/src/os2datascanner",
       # reload when translations are compiled with `docker-compose exec report django-admin compilemessages`
       "--reload-include", "*.mo",
       "os2datascanner.projects.report.asgi:application",
