--- a/src/os2datascanner/projects/admin/default-settings.toml
+++ b/src/os2datascanner/projects/admin/default-settings.toml
@@ -68,6 +68,8 @@ OS2MO_CLIENT_SECRET = ""
 OS2MO_EMAIL_ADDRESS_TYPE = ""
 # Pagination size/limit of results pr. query
 OS2MO_PAGE_SIZE = 1
+# How long should we wait for OS2mo to reply to a HTTP request? (in seconds)
+OS2MO_REQUEST_TIMEOUT = 120
 
 # The number of seconds to wait for a client credentials response from an OAuth
 # 2.0 token provider before concluding that something has gone wrong
