--- a/dev-environment/admin/dev-settings.toml
+++ b/dev-environment/admin/dev-settings.toml
@@ -45,10 +45,12 @@ MSGRAPH_EWS_AUTH = true
 OS2MO_TOKEN_URL = "http://keycloak:8080/auth/realms/mo/protocol/openid-connect/token"
 # Use OS2mo endpoint, but without graphql version. This is added in os2mo_import_job.py
 OS2MO_ENDPOINT_BASE = "http://mo:5000/graphql/"
-OS2MO_CLIENT_ID = ""
-OS2MO_CLIENT_SECRET = ""
+OS2MO_CLIENT_ID = "dipex"
+# This client secret is only used in the development docker-compose.yml for MO
+OS2MO_CLIENT_SECRET = "603f1c82-d012-4d04-9382-dbe659c533fb"
 # UUID of Mo-address type that holds employee emailaddress(can differ, this is from Kolding fixture)
 OS2MO_EMAIL_ADDRESS_TYPE = "f376deb8-4743-4ca6-a047-3241de8fe9d2"
+OS2MO_PAGE_SIZE = 50
 
 # [scans]
 ENABLE_FILESCAN = true
