--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,9 @@ exclude_lines =
      \bpass\b
 
 [mutmut]
-paths_to_mutate=src/os2datascanner/projects/report/
-tests_dir=src/os2datascanner/projects/report/tests/
-runner=docker-compose exec report django-admin test os2datascanner.projects.report.tests
+# Configure this to the tests and code you want to do mutation testing on.
+# Remember to also configure the pre_mutation-function in mutmut_config.py.
+# You can input multiple paths here, separated by commas.
+paths_to_mutate=src/os2datascanner/projects/report/organizations/models/account_outlook_setting.py
+tests_dir=src/os2datascanner/projects/report/organizations/tests/
+runner=docker compose exec report pytest organizations/tests/test_account_outlook_setting.py
