--- a/setup.cfg
+++ b/setup.cfg
@@ -59,6 +59,6 @@ exclude_lines =
 # Configure this to the tests and code you want to do mutation testing on.
 # Remember to also configure the pre_mutation-function in mutmut_config.py.
 # You can input multiple paths here, separated by commas.
-paths_to_mutate=src/os2datascanner/projects/report/organizations/models/account_outlook_setting.py
-tests_dir=src/os2datascanner/projects/report/organizations/tests/
-runner=docker compose exec report pytest organizations/tests/test_account_outlook_setting.py
+paths_to_mutate=src/os2datascanner/engine2/conversions/utilities/navigable.py
+tests_dir=src/os2datascanner/engine2/tests
+runner=docker compose exec admin pytest ../../engine2/tests/test_navigable.py
