--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -172,7 +172,7 @@ Build API:
       alias: samba
   variables:
     SMB_USER: os2
-    SMB_PASSWD: 12345_rosebud_password_admin
+    SMB_PASSWD: swordfish
     SMB_SHARE_NAME: general
     SMB_SHARE_PATH: ${CI_PROJECT_DIR}/src/os2datascanner/engine2/tests/data/engine2
     SMB_SHARE_BROWSABLE: "no"
@@ -239,7 +239,7 @@ Integration Test Admin Application:
       command: [exporter]
   variables:
     SMB_USER: os2
-    SMB_PASSWD: 12345_rosebud_password_admin
+    SMB_PASSWD: swordfish
     SMB_SHARE_NAME: general
     SMB_SHARE_PATH: ${CI_PROJECT_DIR}/src/os2datascanner/engine2/tests/data/engine2
     SMB_SHARE_BROWSABLE: "no"
@@ -361,7 +361,7 @@ Performance Test:
       command: [exporter]
   variables:
     SMB_USER: os2
-    SMB_PASSWD: 12345_rosebud_password_admin
+    SMB_PASSWD: swordfish
     SMB_SHARE_NAME: general
     SMB_SHARE_PATH: ${CI_PROJECT_DIR}/src/os2datascanner/engine2/tests/data/engine2
     SMB_SHARE_BROWSABLE: "no"
