--- a/src/os2datascanner/projects/report/default-settings.toml
+++ b/src/os2datascanner/projects/report/default-settings.toml
@@ -204,7 +204,9 @@ FRONTEND_URL = 'https://myfrontendclient.com' # Redirect URL for the client if y
 # Samlt assertion signage
 CERT_FILE = ''
 KEY_FILE = ''
+
 AUTHN_REQUESTS_SIGNED = false
+WANT_ASSERTIONS_SIGNED = false
 WANT_RESPONSE_SIGNED = false
 TOKEN_REQUIRED = false
 
