--- a/requirements/python-requirements/requirements-all.txt
+++ b/requirements/python-requirements/requirements-all.txt
@@ -71,7 +71,7 @@ deprecated==1.2.13
     # via redis
 dictor==0.1.11
     # via grafana-django-saml2-auth
-django==4.0.10
+django==4.2.14
     # via
     #   -r requirements-all.in
     #   channels
@@ -109,7 +109,9 @@ django-storages[google]==1.13.1
 django-structlog==8.0.0
     # via -r requirements-all.in
 djangorestframework==3.14.0
-    # via -r requirements-all.in
+    # via
+    #   -r requirements-all.in
+    #   drf-extra-fields
 dnspython==2.2.1
     # via
     #   email-validator
@@ -306,8 +308,11 @@ pygments==2.13.0
     # via
     #   exchangelib
     #   ipython
+    #   rich
 pyjwt==2.8.0
     # via grafana-django-saml2-auth
+pymssql==2.3.0
+    # via -r requirements-all.in
 pynacl==1.5.0
     # via -r requirements-all.in
 pyopenssl==22.1.0
